--- a/css/estilo.css
+++ b/css/estilo.css
@@ -11,12 +11,15 @@ body {
 }
 
 #container {
-    background: #ede9cc url(/imagens/bg-container.png) top center repeat-y;
     margin: 0 auto;
     min-width: 740px;
     max-width: 1180px;
 }
 
+#home #container {
+    background: #ede9cc url(/imagens/bg-container.png) top center repeat-y;
+}
+    
 #topo {
     position: relative;
     background: #dbcd87;
@@ -75,8 +78,16 @@ body {
     line-height: 2.1em;
 }
 
+#menu-locais .locais a {
+    color:#6e672c;
+}
+
 a {
     text-decoration: none;
+}
+
+a.visited {
+    color: #6e672c;
 }
 
 a.reserva {
@@ -108,6 +119,12 @@ ul#navegacao a {
     line-height: 30px;
 }
 
+body#home #navegacao  a#home,
+body#historia #navegacao  a#historia {
+    background: #fdf6be;
+    cursor: text;
+}
+
 ul#navegacao a:hover {
     background: #fdf6be;
 }
@@ -136,6 +153,56 @@ ul#navegacao a:hover {
 .conteudo {
     margin: 0 auto;
     width: 90%;
+}
+
+.conteudo #titulo-reserva {
+    border-bottom: 1px solid #b5ab56;
+}
+
+.conteudo form #p-principal {
+    margin-top: 15px;
+    font-size: 1.2em;
+    color: #b5ab56;
+    font-weight: bold;
+}
+
+.conteudo form p {
+    margin-top: 20px;
+    font-size: 1em;
+    color: #b5ab56;
+    font-weight: bolder;
+}
+
+.conteudo form input {
+    margin: 15px 0;
+    width: 150px;
+    height: 20px;
+}
+
+.conteudo form select {
+    margin: 15px 15px 0 0;
+    width: 100px;
+    height: 20px;
+}
+
+#formulario {
+    margin-left: 0;
+    width: 450px;
+    padding: 20px;
+    border: 2px solid #837b35;
+    border-radius: 15px;
+}
+
+#buttom {
+    margin-top: 30px;
+    padding: 10px;
+    height: 40px;
+    width: 340px;
+    color: #fff;
+    font-weight: bold;
+    background: #b5ab56;
+    border: 2px solid #837b35;
+    border-radius: 10px;
 }
 
 #rodape {
